Actualización de filtros

--- a/agentes/templates/agentes/agentes.html
+++ b/agentes/templates/agentes/agentes.html
@@ -13,10 +13,20 @@
          h4{
         font-size: 15px;
     }
+
+         .container-fluid {
+            height: 100%; /* Ajusta la altura según tus necesidades */
+            overflow-y: auto; /* Esto hace que la div sea scrollable en el eje Y */
+            border: 1px solid #ccc; /* Añade un borde para visualización */
+            padding: 10px; /* Añade un relleno opcional */
+        }
     </style>
 {% endblock %}
 
 {% block content %}
+
+    <div class="container-fluid">
+
     <div class="blur"></div>
     <div class="RegCli hiddenRC">
         <ion-icon name="close-outline" class="closeRC"></ion-icon>
@@ -313,7 +323,7 @@
             {% csrf_token %}
             <input type="hidden" name="agente_id" id="agenteIdInput">
         </form>
-
+    </div>
 {% endblock %}
 
 {% block java %}
