--- a/clientes/templates/clientes/clientes.html
+++ b/clientes/templates/clientes/clientes.html
@@ -14,11 +14,20 @@
         font-size: 15px;
     }
 
+     .container-fluid {
+            height: 100%; /* Ajusta la altura según tus necesidades */
+            overflow-y: auto; /* Esto hace que la div sea scrollable en el eje Y */
+            border: 1px solid #ccc; /* Añade un borde para visualización */
+            padding: 10px; /* Añade un relleno opcional */
+        }
     </style>
 {% endblock %}
 
 
 {% block content %}
+
+    <div class="container-fluid">
+
     <div class="blur"></div>
     <div class="RegCli hiddenRC">
         <ion-icon name="close-outline" class="closeRC"></ion-icon>
@@ -334,6 +343,8 @@
             {% csrf_token %}
             <input type="hidden" name="cliente_id" id="clienteIdInput">
     </form>
+
+    </div>
 
 {% endblock %}
 
