--- a/reservas/templates/reservas/reservasV.html
+++ b/reservas/templates/reservas/reservasV.html
@@ -10,10 +10,20 @@
     --black1: #24252A;
     --tamañoOps: 90px;
     }
+
+.container-fluid {
+            height: 100%; /* Ajusta la altura según tus necesidades */
+            overflow-y: auto; /* Esto hace que la div sea scrollable en el eje Y */
+            border: 1px solid #ccc; /* Añade un borde para visualización */
+            padding: 10px; /* Añade un relleno opcional */
+        }
+
     </style>
 {% endblock %}
 
 {% block content %}
+
+<div class="container-fluid">
 
 <div class="opsM">
         <div class="dropdown">
@@ -185,6 +195,7 @@
 
 
     </div>
+</div>
 
 {% endblock content %}
 
