--- a/clientes/templates/clientes/clientes_list.html
+++ b/clientes/templates/clientes/clientes_list.html
@@ -12,6 +12,12 @@
         border-color: var(--color2);
     }
 
+     .container-fluid {
+            height: 100%; /* Ajusta la altura según tus necesidades */
+            overflow-y: auto; /* Esto hace que la div sea scrollable en el eje Y */
+            border: 1px solid #ccc; /* Añade un borde para visualización */
+            padding: 10px; /* Añade un relleno opcional */
+        }
     </style>
 {% endblock %}
 
@@ -40,6 +46,38 @@
 {% block content %}
     <!-- Begin Page Content -->
     <div class="container-fluid">
+
+    <!-- Filtro de clientes -->
+<div class="shadow mb-4">
+    <div class="card-header">
+        <h6 class="m-0 font-weight-bold text-primary">Filtrar Clientes</h6>
+    </div>
+    <div class="card-body">
+        {% if not clientes %}
+            <div class="alert alert-warning" role="alert">
+                No se encontraron resultados para los filtros seleccionados.
+            </div>
+        {% endif %}
+        <form method="get" class="row">
+            <div class="form-group col-sm-3">
+                <label for="localidad">Localidad:</label>
+                <input type="text" name="localidad" class="form-control" value="{{ request.GET.localidad }}">
+            </div>
+            <div class="form-group col-sm-3">
+                <label for="edad">Edad:</label>
+                <input type="number" name="edad" class="form-control" value="{{ request.GET.edad }}">
+            </div>
+            <div class="form-group col-sm-3">
+                <label for="nombre">Nombre:</label>
+                <input type="text" name="nombre" class="form-control" value="{{ request.GET.nombre }}">
+            </div>
+            <div class="form-group col-sm-3 align-self-end">
+                <button type="submit" class="btn btn-primary mt-2">Filtrar</button>
+                <a href="{% url 'cliente_list' %}" class="btn btn-secondary mt-2">Limpiar Filtros</a>
+            </div>
+        </form>
+    </div>
+</div>
 
 
         <!-- DataTales Example -->
