--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -15,6 +15,10 @@
       <!--CHATBOT-->
       <script src="//code.tidio.co/cbxjvlfogixxmic4bqy5cgf47kscrdps.js" async></script>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
+
     <!-- Estilos para principal -->
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/principal.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/scrollbar.css' %}">
@@ -35,7 +39,7 @@
     <link rel="stylesheet" type="text/css" href={% static 'Fonts/fuentes.css' %}>
     <link rel="stylesheet" type="text/css" href={% static 'assets/css/topmenu.css' %}>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    <link rel="shortcut icon" href={% static 'Imgs/SVG/SS-LOGO.svg' %}/>
+    <link rel="shortcut icon" href={% static 'Imgs/SVG/ss-logo-new.svg' %}/>
     <title>POLARISS</title>
   </head>
   {% block style %}{% endblock %}
@@ -86,13 +90,16 @@
     <div class="l-navbar" id="navbar">
       <div class="logo-details">
         <span class="logo_name">Polari</span>
-        <svg class="polariss-logo" id="LogoToggle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 176.22 151.71">
-          <title>Recurso 1</title>
-          <g id="Capa_2" data-name="Capa 2">
-          <g id="Capa_1-2" data-name="Capa 1">
-          <path d="M48.74,151.71a62.73,62.73,0,0,1-35.8-12.2,59.46,59.46,0,0,1-11.7-11.8c-1.6-2.1-1.7-3.4,0-5.5q5.25-6.6,10.8-12.9c2.7-3.1,5.8-5.9,8.7-8.8a10.63,10.63,0,0,1,1.1-.9c1.8-1.4,3-1.4,4.8,0,1.5,1.2,2.9,2.5,4.3,3.8a40.5,40.5,0,0,0,20.2,9.9c4.5.8,8.4-.3,11.5-3.8,2.1-2.4,2.1-4.3-.1-6.6a56.9,56.9,0,0,0-14.8-10.5c-7.2-3.7-14.4-7.4-21.1-12.1-7.2-5.1-13.3-11.1-17.2-19.1-8.2-16.5-5.3-34.5,7.6-47.7,5.8-5.9,12.5-10.3,20.8-11.9,12.8-2.4,25.6-2.5,37.9,2.4A60.45,60.45,0,0,1,88,11.11c1,.7,2,1.4,3,2.2a3,3,0,0,0,3.9.2c1.9-1.2,3.8-2.2,5.7-3.4a49.54,49.54,0,0,1,21.8-7.3c8.1-.7,16.1-.3,23.9,2.3,9,3.1,16.6,8.4,23.3,15.1a15.41,15.41,0,0,1,2.5,3.6,3,3,0,0,1-.3,3.6c-5.2,6.4-10.4,12.8-16.9,18-2.1,1.7-2.8,1.8-5.2.4-3.5-2.1-6.8-4.4-10.3-6.6-3.1-1.9-6.4-3.7-10.2-3.9a12.75,12.75,0,0,0-11.5,5.4c-1.3,1.7-1.1,3.1.7,5.3a29.65,29.65,0,0,0,7.8,6.2c5.6,3.3,11.4,6.2,17.2,9.3,6.6,3.5,13.1,7.2,18.7,12.1a40.47,40.47,0,0,1,14,28.9c1,17.8-7.1,30.7-21.6,40-5.2,3.4-11.2,4.7-17.3,5.6a70.67,70.67,0,0,1-10.2,1.1,60.65,60.65,0,0,1-20.2-2.9c-3.4-1.1-6.6-2.7-9.9-4.1-.1-.1-.3-.1-.4-.2-3-1.7-3.2-3.1-1.3-6s3.9-5.6,5.6-8.6a44.07,44.07,0,0,0,5.3-21.9c0-3.6-.1-7.2,0-10.8,0-2.6.5-3.1,3.1-3.5,1.9-.3,3.8-.6,5.6-.9a.89.89,0,0,0,.6-1.5,4.13,4.13,0,0,0-1.1-.7c-2.1-.9-4.2-1.8-6.2-2.8a11.06,11.06,0,0,1-5.1-4.7,84.06,84.06,0,0,1-7.5-15,1.85,1.85,0,0,1-.2-.7c-.3-.9-.1-1.4,1-1.6a196.73,196.73,0,0,1,20.2-3c1.9-.2,3.9-.5,5.8-.7a1.09,1.09,0,0,0,.7-1.8,4,4,0,0,0-1.6-1.3c-7.1-3-14.6-4.8-22-7q-4.95-1.5-9.9-2.7a14.94,14.94,0,0,1-8.9-6.4,50.88,50.88,0,0,1-3-5,28.31,28.31,0,0,0-7.6-8.2c-1.8-1.3-3.8-.7-4.2,1.5a19.53,19.53,0,0,0,0,5.4c.6,4.1,2.6,7.6,4.9,10.9s2.7,6.9,1.6,10.9c-3.1,10.8-5.9,21.7-8.9,32.5a7.49,7.49,0,0,0-.2,2.1c0,1.1.8,1.6,1.7,1.1a6.14,6.14,0,0,0,1.9-1.7c4.4-5.5,8.8-11,13.3-16.5a16.18,16.18,0,0,1,1.8-1.9c1.2-1.1,1.9-1.1,2.9.2a56.18,56.18,0,0,1,3.5,5c2.3,3.8,4.6,7.7,6.7,11.6a5,5,0,0,1,.2,3c-.5,3.3-1.2,6.6-1.8,9.9a1,1,0,0,0,.4.9c.2.1.7-.1.9-.3,1-1.1,1.8-2.2,2.8-3.2s2.2-2,3.8-1.4,1.6,2.2,1.7,3.6c.6,7.5,0,14.9-2.9,22-2.7,6.7-6.3,12.8-12,17.5-4.4,3.6-9.5,5.7-14.7,7.7A76.51,76.51,0,0,1,48.74,151.71Z"/>
-          </g></g>
-        </svg>
+
+
+
+          <svg class="polariss-logo" id="LogoToggle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 174.79 153.36">
+              <g id="Capa_1-2" data-name="Capa 1">
+                <path class="cls-1" d="m160.77,32.36c5.34-5.69,4.5-14.76-1.79-19.39-.04-.03-.08-.06-.12-.09-13.6-10.04-28.73-12.05-45.11-9-8.01,1.49-14.43,5.73-21.1,9.67-1.72,1.02-2.47,1.13-4.11-.08-4.4-3.24-8.8-6.47-13.9-8.73C62.4-.69,49.63-.81,36.86,1.17c-11.41,1.77-20.39,8.23-27.27,17.46C2.84,27.7.11,37.84,2.03,49.15c1.71,10.06,6.46,18.63,13.64,25.51,8.09,7.75,18.04,12.93,27.97,18,5.79,2.96,11.35,6.3,16.01,11.07,2.57,2.63,2.27,4.62.12,6.98-4.79,5.25-10.62,4.29-16.4,2.52-4.53-1.39-8.64-3.56-12.38-6.34-4.39-3.26-9.98-4.66-15.3-3.39-.86.2-1.73.46-2.62.78-14.64,5.3-17.6,24.77-5.7,34.8,9.69,8.17,21.43,12.6,34.74,13.94,9.63.97,19.18-.2,28.41-3.64,7.33-2.73,14.65-6.1,19.41-12.02,5.93-7.37,10.09-16.19,10.8-26.05.24-3.39.28-6.83-.03-10.2-.32-3.46-2.44-4.25-5.16-2.02-1.4,1.15-2.44,2.76-3.63,4.17l-1.1-.52c.45-2.65,1.04-5.3,1.32-7.97.21-1.95,1.72-3.87.37-5.9-3.11-4.69-5.31-9.91-8.66-14.48-2.87-3.92-2.95-4.2-6.16-.5-4.19,4.83-7.91,10.09-12.09,14.94-1.33,1.54-2.7,4.58-4.72,3.69-1.12-.49-.03-4.09.49-6.28,2.42-10.22,5.18-20.33,8.36-30.34,1.18-3.72.74-6.9-1.62-10.34-2.58-3.77-4.8-8.03-5.31-12.75-.21-1.92-.38-4.33,1.28-5.69,1.93-1.57,3.54.53,4.82,1.5,2.74,2.07,4.93,4.8,6.56,7.82,2.6,4.81,5.5,9.06,11.19,10.56,8.34,2.21,16.63,4.61,24.91,7.05,2.79.82,5.48,1.98,8.2,3.03.87.33,1.44.98,1.36,2.01-.11,1.47-1.26.84-2.01.98-2.96.55-5.85,1.45-8.87,1.4-5.48-.08-10.79,1.42-16.18,2.33-1.13.19-1.73.09-1.17,1.75,1.97,5.84,4.91,11.15,8.14,16.34,2.45,3.95,6.79,4.86,10.55,6.72.86.43,2.17.65,1.84,1.91-.28,1.09-1.51.36-2.28.58-7.28,2.15-7.5-.48-7.37,8.87.09,5.86.29,11.74-1.02,17.54-1.64,7.24-5.03,13.56-9.5,19.41-1.73,2.26-1.22,5.3,1.28,6.66,9.12,4.98,19.03,6.92,29.23,7.18,4.51.12,9.09-.68,13.57-1.46,7.9-1.37,15.38-4.08,21.48-9.46,10.73-9.47,16.81-21.08,15.89-35.89-.63-10.08-3.99-18.93-10.84-26.29-8.12-8.72-18.77-13.67-29.08-19.07-6.52-3.42-13.2-6.54-18.39-11.99-1.94-2.05-2.01-4.12-.12-6.25,4.49-5.04,10.55-6.04,17.15-2.93.05.02.1.05.15.07,9.1,4.34,19.92,2.64,26.82-4.72l.37-.39Z"/>
+              </g>
+          </svg>
+
+
       </div>
     <nav class="nav">
 
@@ -205,6 +212,10 @@
 
     <!--Scripts para clientes-->
     <script src="{% static 'assets/js/clientes.js' %}"></script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="..."></script>
